# cionic-data

./: .flake8  .gitignore  .pre-commit-config.yaml  DEPENDENCY_LICENSES.md  LICENSE  README.md  npz.md  pyproject.toml
cionic/: __init__.py  api.py  bno080frps.py  dsp.py  json2npy.py  kinematics.py  kinematics_setup.py  runner.py  segment.py  tools.py  triggers.py
jupyter/: Dockerfile  README.md  docker-compose.yml  jupyter_notebook_config.py  requirements.txt
jupyter/analysis/: electrode_config.ipynb  gait.ipynb  parse.ipynb  reps.ipynb  runner.ipynb  signal-csv.ipynb  signal.ipynb
jupyter/analysis/norm_data/kinematics_norm_data/from_Cionic/: avg_angles.csv  avg_angles_compiled_sides.csv  std_angles.csv  std_angles_compiled_sides.csv
jupyter/analysis/norm_data/kinematics_norm_data/from_Fukuchi_et_al/: avg_angles_allage_treadmill_comfspeed.csv  avg_angles_allage_treadmill_comfspeed_deprecated.csv  avg_angles_allage_treadmill_speed_T1.csv  avg_angles_allage_treadmill_speed_T2.csv  avg_angles_allage_treadmill_speed_T3.csv  avg_angles_allage_treadmill_speed_T4.csv  avg_angles_allage_treadmill_speed_T6.csv  avg_angles_allage_treadmill_speed_T7.csv  avg_angles_allage_treadmill_speed_T8.csv  foot_rotation_fixer.ipynb  std_angles_allage_treadmill_comfspeed.csv  std_angles_allage_treadmill_speed_T1.csv  std_angles_allage_treadmill_speed_T2.csv  std_angles_allage_treadmill_speed_T3.csv  std_angles_allage_treadmill_speed_T4.csv  std_angles_allage_treadmill_speed_T6.csv  (+2 more)
recordings/: README.md
scripts/: README.md  auth.py  download.py  requirements.txt
(+49 files in other folders)
