[tool.black]
line-length = 88
target-version = ["py39"]
skip-string-normalization = true

[tool.isort]
profile = "black"
line_length = 88
include_trailing_comma = true
multi_line_output = 3
known_first_party= ["cionic", "kinematics"]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cionic"
version = "0.1.0"

[tool.setuptools]
packages = ["cionic"]
